--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -1471,7 +1471,7 @@ select#type.type-create {
 }
 
 #policycloud-account-sidebar > nav button.policycloud-logout {
-  color: rgba(185, 16, 16, 0.842);
+  color: rgba(185, 16, 16, 0.842) !important;
 }
 
 #policycloud-account-content {
@@ -1572,7 +1572,7 @@ section.policycloud-account-overview p {
 
 section.policycloud-account-overview ul {
   padding: 0;
-  margin: 0;
+  margin: 10px 0;
   font-size: 80%;
   list-style-type: none;
 }
@@ -1580,6 +1580,11 @@ section.policycloud-account-overview ul {
 section.policycloud-account-overview ul li {
   margin-right: 7px;
   display: inline-block;
+}
+
+section.policycloud-account-overview h4 {
+  font-size: 18px;
+  margin: 20px 0;
 }
 
 section.policycloud-account-overview table,
@@ -1601,6 +1606,18 @@ section.policycloud-account-overview table .large-figure {
 }
 
 /* Assets tab */
+
+section.policycloud-account-assets header form.selector {
+  display: inline;
+}
+
+section.policycloud-account-assets header form.selector * {
+  width: auto;
+  display: inline-block;
+  float: none;
+  margin-right: 5px;
+  padding: 0 5px;
+}
 
 section.policycloud-account-assets
   #policycloud-account-asset-collection-filters {
