--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -1079,20 +1079,31 @@ select#type.type-create {
 
 .policycloud-marketplace button.action {
   padding: 7px 15px;
-  border: 1px solid #cccccc;
+  border: 1px solid var(--policycloud-background-notice-outline);
   border-radius: 8px;
-  background: #ececec !important;
+  background: var(--policycloud-background-notice) !important;
   color: var(--policycloud-text-color) !important;
   font-size: 14px;
   font-weight: 500;
   transition: all 0.2s ease-in-out;
 }
 
+.policycloud-marketplace button.action.destructive {
+  background-color: var(--policycloud-background-failure) !important;
+  border-color: var(--policycloud-background-failure-outline);
+  color: var(--policycloud-background-failure-outline) !important;
+}
+
 .policycloud-marketplace button.action:hover {
   cursor: pointer;
-  background-color: var(--policycloud-highlight-color-dark) !important;
-  color: var(--policycloud-text-color-invert) !important;
+  transform: scale(0.98);
   transition: all 0.2s ease-in-out;
+}
+
+.policycloud-marketplace button.action:active {
+  opacity: 0.7;
+  transform: scale(0.95);
+  transition: all 0.1s ease-in-out;
 }
 
 .policycloud-marketplace button.action.loading {
@@ -1178,6 +1189,7 @@ select#type.type-create {
   display: inline-block !important;
   padding: 0 10px;
   border: 1px solid var(--policycloud-background-notice-outline);
+  color: var(--policycloud-text-color);
 }
 
 .policycloud-marketplace span.label.success {
@@ -1900,6 +1912,11 @@ section.policycloud-account-information
   margin: 0 5px;
   font-size: 100%;
   text-decoration: underline;
+}
+
+section.policycloud-account-information button.action {
+  display: block;
+  margin: 15px 0;
 }
 
 button#policycloud-marketplace-resend-verification-email.disabled,
